--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -1,11 +1,11 @@
 name: coffeico
-description: Free icons for different coffee brewing methods
-version: 0.0.1
+description: "Free icons for different coffee brewing methods"
+version: 0.1.0
 homepage: https://github.com/typomanka/coffeico
 repository: https://github.com/typomanka/coffeico
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: '>=3.3.2 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
@@ -15,7 +15,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
